Added links to the top

--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -5,12 +5,28 @@
    "id": "0dd98221",
    "metadata": {},
    "source": [
-    "# Data Preprocessing / Cleaning"
+    "# Data Preprocessing / Cleaning\n",
+    "These are the following steps taken to preprocess/clean the data.\n",
+    "\n",
+    "1. <a href=\"#convert_cat_data\">Convert Categorical Data</a> \n",
+    "   * There are several features that need to be converted\n",
+    "2. <a href=\"#convert_data_types\">Convert Data Types</a> \n",
+    "   * There is no data that needs conversion in this data set\n",
+    "3. <a href=\"#drop_features\">Dropping non-essential features</a>\n",
+    "   * There is one feature that would be dropped due to it not affecting the outcome\n",
+    "4. <a href=\"#resolve_nan\">Resolving Nan values</a>\n",
+    "   * Four features have numerous NaN values.\n",
+    "5. <a href=\"#dealing_with_outliers\">Identifying / Resolving Outliers</a>\n",
+    "   * There are numerous outliers found in the four features above\n",
+    "6. <a href=\"#ML\">Machine Learning Training</a>\n",
+    "   * Training Random Forest models\n",
+    "   * Training Support Vector Machine models\n",
+    "   * Both of these will have data with and without outliers"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0bce5364",
+   "id": "dea5e4fd",
    "metadata": {},
    "source": [
     "## Importing Libraries and loading data"
@@ -318,10 +334,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe0ba93",
+   "id": "462aaba4",
    "metadata": {},
    "source": [
-    "## Beginning Data Process"
+    "\n",
+    "## Beginning Data Process\n",
+    "<a id=\"convert_cat_data\"></a>"
    ]
   },
   {
@@ -329,7 +347,7 @@
    "id": "b50e827e",
    "metadata": {},
    "source": [
-    "### Converting Categorical Data"
+    "### Converting Categorical Data\n"
    ]
   },
   {
@@ -658,6 +676,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7aa9234d",
+   "metadata": {},
+   "source": [
+    "<a id=\"convert_data_types\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02a4a00a",
    "metadata": {},
    "source": [
@@ -704,10 +730,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03156a9c",
+   "id": "322460c7",
    "metadata": {},
    "source": [
     "There is no need to do any conversion of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c48a93",
+   "metadata": {},
+   "source": [
+    "<a id=\"drop_features\"></a>"
    ]
   },
   {
@@ -1042,10 +1076,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ed22fb5",
+   "metadata": {},
+   "source": [
+    "<a id=\"resolve_nan\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d496a01d",
    "metadata": {},
    "source": [
-    "## Dealing with missing values\n"
+    "## Dealing with missing values"
    ]
   },
   {
@@ -1742,10 +1784,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "621f86cd",
+   "metadata": {},
+   "source": [
+    "<a id=\"dealing_with_outliers\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7569ba20",
    "metadata": {},
    "source": [
-    "## Identifying Outliers"
+    "## Identifying / Resolving Outliers"
    ]
   },
   {
@@ -1992,7 +2042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb188e9",
+   "id": "74282d10",
    "metadata": {},
    "source": [
     "### Observe IQR scores\n",
@@ -2002,7 +2052,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "a5022e05",
+   "id": "415708b5",
    "metadata": {
     "scrolled": true
    },
@@ -2033,7 +2083,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "627cfc7f",
+   "id": "e5d38185",
    "metadata": {
     "scrolled": false
    },
@@ -2196,7 +2246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d349c424",
+   "id": "ad4ae93d",
    "metadata": {},
    "source": [
     "## Showing BoxPlots for Outliers before dropping points"
@@ -2204,7 +2254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d79ff3",
+   "id": "454130e3",
    "metadata": {},
    "source": [
     "### Applicant Income"
@@ -2247,7 +2297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9fde752",
+   "id": "b877df9d",
    "metadata": {},
    "source": [
     "### Co-applicant Income"
@@ -2256,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "dd4ab8ef",
+   "id": "0bd7eb1b",
    "metadata": {
     "scrolled": true
    },
@@ -2290,7 +2340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0501f8d5",
+   "id": "aee47367",
    "metadata": {},
    "source": [
     "### Loan Amount"
@@ -2299,7 +2349,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5b76cf1d",
+   "id": "f2d73eb9",
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "103d338c",
+   "id": "9c7d7366",
    "metadata": {},
    "source": [
     "### Loan Amount Term"
@@ -2340,7 +2390,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "863f8636",
+   "id": "28e93b6d",
    "metadata": {
     "scrolled": true
    },
@@ -2374,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390a8b8d",
+   "id": "84daa697",
    "metadata": {},
    "source": [
     "### Removing the outliers"
@@ -2383,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f942ac5d",
+   "id": "6264161a",
    "metadata": {
     "scrolled": false
    },
@@ -2538,7 +2588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa4220a",
+   "id": "05e45446",
    "metadata": {},
    "source": [
     "### Adding removed columns"
@@ -2547,7 +2597,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "35092d8a",
+   "id": "202052d0",
    "metadata": {},
    "outputs": [
     {
@@ -2580,31 +2630,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c522da82",
+   "metadata": {},
+   "source": [
+    "<a id=\"ML\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb944f09",
    "metadata": {},
    "source": [
-    "## The Machine Learning Section"
+    "## The Machine Learning Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "97e2cb6c",
+   "execution_count": 116,
+   "id": "42f97535",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing libraries\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report\n"
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.svm import SVC\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75d38104",
+   "id": "d0e70f6d",
    "metadata": {},
    "source": [
-    "### Spliting our data"
+    "#### Spliting our data"
    ]
   },
   {
@@ -2625,10 +2685,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeffc794",
+   "id": "58cf64e9",
    "metadata": {},
    "source": [
-    "### Training Random Forest with outliers"
+    "### Training Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83998551",
+   "metadata": {},
+   "source": [
+    "#### Training Random Forest with outliers"
    ]
   },
   {
@@ -2693,10 +2761,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fc4ad7",
+   "id": "09b26ca4",
    "metadata": {},
    "source": [
-    "### Training Random Forest without outliers"
+    "#### Training Random Forest without outliers"
    ]
   },
   {
@@ -2732,9 +2800,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8e08f2c",
+   "metadata": {},
+   "source": [
+    "### Training Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b70128f",
+   "metadata": {},
+   "source": [
+    "#### Training SVM with outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "e9dec9e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(probability=True)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm_model = SVC(probability=True)\n",
+    "svm_model.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "ed2fe1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_pred = svm_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "6e7519ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0  63]\n",
+      " [  1 121]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        63\n",
+      "           1       0.66      0.99      0.79       122\n",
+      "\n",
+      "    accuracy                           0.65       185\n",
+      "   macro avg       0.33      0.50      0.40       185\n",
+      "weighted avg       0.43      0.65      0.52       185\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,svm_pred))\n",
+    "print(classification_report(y_test,svm_pred))\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427e8c0d",
+   "metadata": {},
+   "source": [
+    "#### Training SVM without outliers\n",
+    "<a id='test'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "25932e59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(probability=True)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm_model_1 = SVC(probability=True)\n",
+    "svm_model_1.fit(X_train_1,y_train_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "1be40f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 35]\n",
+      " [ 0 99]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        35\n",
+      "           1       0.74      1.00      0.85        99\n",
+      "\n",
+      "    accuracy                           0.74       134\n",
+      "   macro avg       0.37      0.50      0.42       134\n",
+      "weighted avg       0.55      0.74      0.63       134\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\RSanchez\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\RSanchez\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\RSanchez\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    " svm_pred_1 = svm_model_1.predict(X_test_1)\n",
+    "print(confusion_matrix(y_test_1,svm_pred_1))\n",
+    "print(classification_report(y_test_1,svm_pred_1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76537ef",
+   "id": "27a557ff",
    "metadata": {},
    "outputs": [],
    "source": []
