--- a/Running_Provided_Data_through_models.ipynb
+++ b/Running_Provided_Data_through_models.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "61ce8886",
+   "id": "e7288c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "974ed1aa",
+   "id": "9818af71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "21088de3",
+   "id": "ff3ff034",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "16791fe5",
+   "id": "ba7e5651",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a9a388c9",
+   "id": "d0398395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,23 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "3ee8a98a",
+   "execution_count": 44,
+   "id": "a41df61b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 1, 1: 366}"
+       "{0: 59, 1: 308}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "svm_pred = loaded_model_SVM.predict(test_df)\n",
+    "svm_pred = loaded_model_SVM.predict(scaled_features)\n",
     "unique, counts = np.unique(svm_pred, return_counts=True)\n",
     "results_svm = dict(zip(unique, counts))\n",
     "results_svm"
@@ -117,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ad6d7217",
+   "execution_count": 45,
+   "id": "4f832408",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the best random forest model, this model is predicting that 100.0% of these applications would get approved.\n",
-      "Using the best random forest model, this model is predicting that 0.0% of these applications would get rejected.\n"
+      "Using the best random forest model, this model is predicting that 84.0% of these applications would get approved.\n",
+      "Using the best random forest model, this model is predicting that 16.0% of these applications would get rejected.\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdcddd9a",
+   "id": "ee924e5b",
    "metadata": {},
    "outputs": [],
    "source": []
