--- a/Running_Provided_Data_through_models.ipynb
+++ b/Running_Provided_Data_through_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "e7288c5c",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "9818af71",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "ff3ff034",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
        "{0: 59, 1: 308}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "ba7e5651",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "d0398395",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "a41df61b",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "{0: 59, 1: 308}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,9 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "4f832408",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
