--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "id": "f906f410",
    "metadata": {
     "scrolled": false
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "id": "29aa6603",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "id": "644644e8",
    "metadata": {
     "scrolled": false
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "id": "f6810ecc",
    "metadata": {},
    "outputs": [
@@ -2030,6 +2030,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9eebcbba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5849</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4583</td>\n",
+       "      <td>128.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3000</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2583</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6000</td>\n",
+       "      <td>141.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>2900</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>4106</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>8072</td>\n",
+       "      <td>253.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>7583</td>\n",
+       "      <td>187.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>4583</td>\n",
+       "      <td>133.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>614 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ApplicantIncome  LoanAmount\n",
+       "0               5849         NaN\n",
+       "1               4583       128.0\n",
+       "2               3000        66.0\n",
+       "3               2583       120.0\n",
+       "4               6000       141.0\n",
+       "..               ...         ...\n",
+       "609             2900        71.0\n",
+       "610             4106        40.0\n",
+       "611             8072       253.0\n",
+       "612             7583       187.0\n",
+       "613             4583       133.0\n",
+       "\n",
+       "[614 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['ApplicantIncome','LoanAmount']]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3acbe35f",
    "metadata": {},
@@ -2056,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "id": "8076fe80",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "c3662a16",
    "metadata": {},
    "outputs": [
@@ -2415,7 +2533,7 @@
        "[614 rows x 15 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2426,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "86931580",
    "metadata": {
     "scrolled": false
@@ -2438,7 +2556,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2485,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "7ad831e8",
    "metadata": {},
    "outputs": [
@@ -2708,7 +2826,7 @@
        "max       1.000000    1.000000    1.000000    1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2737,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "63addac5",
    "metadata": {
     "scrolled": true
@@ -2768,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "6160e5cc",
    "metadata": {
     "scrolled": false
@@ -2921,7 +3039,7 @@
        "[614 rows x 4 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2948,7 +3066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "e21d12ae",
    "metadata": {
     "scrolled": false
@@ -2960,7 +3078,7 @@
        "<AxesSubplot:xlabel='ApplicantIncome'>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2991,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "64ba657c",
    "metadata": {
     "scrolled": true
@@ -3003,7 +3121,7 @@
        "<AxesSubplot:xlabel='CoapplicantIncome'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3034,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "f492b5e7",
    "metadata": {},
    "outputs": [
@@ -3044,7 +3162,7 @@
        "<AxesSubplot:xlabel='LoanAmount'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3075,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "dbfc333a",
    "metadata": {
     "scrolled": true
@@ -3087,7 +3205,7 @@
        "<AxesSubplot:xlabel='Loan_Amount_Term'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3118,7 +3236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "489c032e",
    "metadata": {
     "scrolled": false
@@ -3417,7 +3535,7 @@
        "[445 rows x 15 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3440,7 +3558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "id": "878454af",
    "metadata": {
     "scrolled": true
@@ -3452,7 +3570,7 @@
        "<AxesSubplot:xlabel='ApplicantIncome'>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3475,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "be2323c6",
    "metadata": {
     "scrolled": true
@@ -3487,7 +3605,7 @@
        "<AxesSubplot:xlabel='CoapplicantIncome'>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3510,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "id": "c50b828b",
    "metadata": {},
    "outputs": [
@@ -3520,7 +3638,7 @@
        "<AxesSubplot:xlabel='LoanAmount'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3543,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "id": "623c50f0",
    "metadata": {
     "scrolled": true
@@ -3555,7 +3673,7 @@
        "<AxesSubplot:xlabel='Loan_Amount_Term'>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3595,7 +3713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "id": "60cd684e",
    "metadata": {},
    "outputs": [
@@ -3605,7 +3723,7 @@
        "(445, 15)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3641,7 +3759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 31,
    "id": "544a157b",
    "metadata": {},
    "outputs": [],
