--- a/Running_Provided_Data_through_models.ipynb
+++ b/Running_Provided_Data_through_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e7288c5c",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,12 @@
     "import joblib \n",
     "\n",
     "loaded_model_randomForest = pickle.load(open('best_random_forest_model.sav','rb'))\n",
-    "loaded_model_SVM = pickle.load(open('best_GridSearch_SVM.sav','rb'))"
+    "loaded_model_SVM = pickle.load(open('best_SVM.sav','rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "9818af71",
    "metadata": {},
    "outputs": [],
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ff3ff034",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 59, 1: 308}"
+       "{0: 232, 1: 135}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "ba7e5651",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the best random forest model, this model is predicting that 84.0% of these applications would get approved.\n",
-      "Using the best random forest model, this model is predicting that 16.0% of these applications would get rejected.\n"
+      "Using the best random forest model, this model is predicting that 37.0% of these applications would get approved.\n",
+      "Using the best random forest model, this model is predicting that 63.0% of these applications would get rejected.\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "d0398395",
    "metadata": {},
    "outputs": [],
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "a41df61b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 59, 1: 308}"
+       "{0: 142, 1: 225}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "4f832408",
    "metadata": {
     "scrolled": true
@@ -127,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the best random forest model, this model is predicting that 84.0% of these applications would get approved.\n",
-      "Using the best random forest model, this model is predicting that 16.0% of these applications would get rejected.\n"
+      "Using the best random forest model, this model is predicting that 61.0% of these applications would get approved.\n",
+      "Using the best random forest model, this model is predicting that 39.0% of these applications would get rejected.\n"
      ]
     }
    ],
